# Obsidian-MCP

./: .env.example  .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml
src/obsidian_mcp/: __init__.py  cli.py  client.py  server.py
src/obsidian_mcp/tools/: __init__.py  batch.py  cli_tools.py  delete.py  directory.py  read.py  search.py  tree.py  utility.py  write.py
tests/: conftest.py  test_batch.py  test_cli_tools.py  test_client.py  test_delete.py  test_directory.py  test_read.py  test_search.py  test_tree.py  test_utility.py  test_write.py
